将签到空间抽离出来封装成单独库

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,23 +7,28 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <com.lishang.checkin.view.CheckInProgress
+    <com.lishang.checkin.CheckInProgress
         android:id="@+id/checkIn"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:background="@android:color/darker_gray"
+        android:background="#408ce2"
         app:align="center"
-        app:check_in_bitmap="@drawable/icon_date_checkin"
-        app:circle_color="@color/colorAccent"
+        app:check_in_color="#ceebfd"
+        app:check_in_hook_color="#2d66d9"
+        app:check_in_progress_color="#ceebfd"
+        app:check_in_progress_show="true"
+        app:circle_color="#2d66d9"
         app:circle_margin="5dp"
-        app:circle_stroke_width="1dp"
-        app:line_color="@color/colorAccent"
-        app:line_height="1dp"
+        app:circle_stroke_color="#ceebfd"
+        app:circle_stroke_width="2dp"
+        app:circle_style="fill"
+        app:line_color="#2d66d9"
+        app:line_height="5dp"
         app:radius="10dp"
-        app:text_date_color="#efefef"
+        app:text_date_color="#edffff"
         app:text_date_size="12sp"
-        app:text_score_color="#efefef"
+        app:text_score_color="#9bccff"
         app:text_score_size="12sp" />
 
 </LinearLayout>
